# pg_radix10

./: LICENSE  Makefile  README.md  pg_radix10.control
python/: pyproject.toml
python/pyradix10/: __init__.py  adapter.py  benchmark.py  core.py  storage.py
python/tests/: test_core.py  test_storage.py
sql/: pg_radix10--1.0.sql  pg_radix10_test.sql
src/: radix10.h  radix10_agg.c  radix10_io.c  radix10_numeric.c  radix10_ops.c
